maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:34: error: value to100 is not a member of Int
for (i<-1 to100) {
          ^